--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1225,14 +1225,15 @@ fillColour {  0% {
     content: '';
     display: block;
     position: absolute;
-    bottom: 3px;
+    bottom: 8px;
     left: 0;
-    height: 3px;
+    height: 6px;
     width: 100%;
-    background-color: #000;
+    background: linear-gradient(to right, #83d6ff, #e881fc);
     transform-origin: right top;
     transform: scale(0, 1);
     transition: color 0.1s,transform 0.2s ease-out;
+    z-index: -9999;
 }
 .nav-link:active::before {
     background-color: #000;
@@ -1242,7 +1243,7 @@ fillColour {  0% {
     transform: scale(1, 1);
 }
 
-.nav-link:first-child {margin-left:14px!important;}
+.nav-link:first-child {margin-left:4px!important;}
 
 
 /*.collapse {*/
