--- a/events/templates/events/detail/panel/active_locations.html
+++ b/events/templates/events/detail/panel/active_locations.html
@@ -11,7 +11,7 @@
       {% for category, location in locations.items %}
       <li class="list-group-item d-flex justify-content-between align-items-center location-category" style='text-transform:capitalize;padding-left:26px;' data-toggle="collapse" href="#{{category|slugify}}">
         + {{category}}
-        <span class="badge badge-primary badge-pill">
+        <span class="badge badge-primary badge-pill" style='background:black; color:white;'>
           <span class='active-count'>0</span>
           <span>/</span>
           <span class='category-count'>{{location.count}}</span>
