--- a/events/templates/events/detail/panel/display.html
+++ b/events/templates/events/detail/panel/display.html
@@ -26,14 +26,14 @@
               <div class='col-7'>
                 <div class='row'>  
                   <div class="form-check" style='text-transform:capitalize;'>
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
+                    <input class="form-check-input highlight-shifts" type="checkbox" value="" id="scheduled-shifts">
+                    <label class="form-check-label" for="scheduled-shifts">
                       Scheduled
                     </label>
                   </div>
                   <div class="form-check" style='text-transform:capitalize;'>
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
+                    <input class="form-check-input highlight-shifts" type="checkbox" value="" id="unscheduled-shifts">
+                    <label class="form-check-label" for="unscheduled-shifts">
                       Unscheduled
                     </label>
                   </div>
