--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -881,7 +881,7 @@ button:focus {
   cursor: pointer;
   -webkit-box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
   box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
-  width:180px;
+  width:167px;
 
 }
 @media (max-width: 600px) {
@@ -971,7 +971,7 @@ button:focus {
 
 
 .read-short{
-  margin:4px 0px;
+  margin:5px 0px;
   padding:4px;
   width:40px;
   font-family: "Source Sans Pro";
@@ -980,7 +980,7 @@ button:focus {
   border:none;
   font-size:17px;
   border-radius:4px;
-  height:33px;
+  height:34px;
 }
 
 .arrival-time {
@@ -1295,3 +1295,8 @@ fillColour {  0% {
 .navbar-collapse.width > .list-group-item {
   /*width: 200px;*/
 }
+
+/*.highlight{border:1px solid green;}*/
+.highlight-default.highlight {border:1px solid red;}
+.highlight-employee.highlight {border:1px solid green;}
+
