Update employee list to prevent item overlapping. Enable update of arrival times by role.

--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -18,7 +18,7 @@
             </div>
             
           </div>
-          <input type="text" class="arrival-time highlight-default" placeholder="Time" aria-label="Arrival">
+          <input type="text" class="arrival-time highlight-default {{shift.0}}" placeholder="Time" aria-label="Arrival">
           
           
           
