Update formatting. Remove sort from control panel. Begin JS for adding new shifts to boards.

--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -3,6 +3,21 @@
 {% block content %}  
 
 
+        <div class="board-column-content shift-template d-none" style='text-transform:uppercase;width:15.3vw'>
+          
+          <input class="read-short highlight-default" type="text" placeholder="#1">
+          <div class="board-item" style='margin-left:5px;height:150px;'>
+            
+            <div class="board-item-content highlight-default" style='width:8.7vw;max-height:35px;'>
+              <div>Extra #1</div>
+            </div>
+            
+          </div>
+          <input type="text" class="arrival-time highlight-default" placeholder="Time" aria-label="Arrival">
+        </div>
+
+
+
 
 <div class='container-fluid' style='height:100vh;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
 
