--- a/events/templates/events/detail/panel/arrival_times.html
+++ b/events/templates/events/detail/panel/arrival_times.html
@@ -20,16 +20,31 @@
                 </select>
               </div>
             </div>
-            <div class='row'>
-              <div class='col-6 pr-0'>
-                <input type="text" class="form-control input-arrival" placeholder='Arrival'>
-              </div>
-              <div class='col-6'>
-                <button type="button" class="btn btn-dark btn-arrival">Update</button>
+            
+            
+            <!--<div class='row'>-->
+            <!--  <div class='col-7 pr-0'>-->
+            <!--    <input type="text" class="form-control input-arrival" placeholder='e.g. 1:10PM'>-->
+            <!--  </div>-->
+            <!--  <div class='col-5'>-->
+            <!--    <button type="button" class="btn btn-dark btn-arrival">Update</button>-->
+            <!--  </div>-->
+            <!--</div>-->
+            
+            <div class="col-12 px-0 input-group">
+              <input type="text" class="input-arrival form-control" placeholder="e.g. 5:30PM">
+              <div class="input-group-append">
+                <button class="btn btn-dark btn-arrival" type="button">Update</button>
               </div>
             </div>
+            
+            
+            
+            
           </li>
     </ul>
     
   </ul>
 </li>
+
+
