--- a/events/templates/events/detail/panel/display.html
+++ b/events/templates/events/detail/panel/display.html
@@ -4,27 +4,26 @@
     <ul class="list-group">
       <li class="list-group-item py-2 toggle">
         <div class='panel-icon display-icon'></div>
-        <div class='panel-label'>Display</div>
+        <div class='panel-label'>Highlight</div>
       </li>
       <ul class="list-group inner">
+          <!--<li class="list-group-item">-->
+          <!--  <div class='row'>-->
+          <!--    <div class='col-12'>-->
+          <!--      <select class="custom-select display-select" style='text-transform:capitalize;'>-->
+          <!--        <option selected>Sort By...</option>-->
+          <!--        <option value="1">Category (Default)</option>-->
+          <!--        <option value="2">Location Name (Asc)</option>-->
+          <!--        <option value="3">Location Name (Desc)</option>-->
+          <!--        <option value="4"># of Positions</option>-->
+          <!--      </select>-->
+          <!--    </div>-->
+          <!--  </div>-->
+          <!--</li>-->
           <li class="list-group-item">
             <div class='row'>
-              <div class='col-12'>
-                <select class="custom-select display-select" style='text-transform:capitalize;'>
-                  <option selected>Sort By...</option>
-                  <option value="1">Category (Default)</option>
-                  <option value="2">Location Name (Asc)</option>
-                  <option value="3">Location Name (Desc)</option>
-                  <option value="4"># of Positions</option>
-                </select>
-              </div>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <div class='row'>
-              <div class='col-5'><span>Highlight:</span></div>
-              <div class='col-7'>
-                <div class='row'>  
+              <!--<div class='col-12'><span>Highlight:</span></div>-->
+              <div class='col-12 pl-3'>
                   <div class="form-check" style='text-transform:capitalize;'>
                     <input class="form-check-input highlight-shifts" type="checkbox" value="" id="scheduled-shifts">
                     <label class="form-check-label" for="scheduled-shifts">
@@ -37,7 +36,6 @@
                       Unscheduled
                     </label>
                   </div>
-                </div>
               </div>
             </div>
           </li>
