--- a/events/templates/events/detail/panel/employees.html
+++ b/events/templates/events/detail/panel/employees.html
@@ -10,9 +10,9 @@
     
     <ul class="list-group inner show">
       <li class="list-group-item" style='height:69vh;'>
-        <div class='board-column'>
+        <div class='board-column pl-0'>
           <div class='scroll-content-wrapper'>
-            <div class="employee-column-content">
+            <div class="employee-column-content" style='letter-spacing:0px;'>
               {% for employee in all_employees %}
                 <div class="board-item" id='{{forloop.counter}}' style='margin-left:5px;'>
                   <div class="board-item-content highlight-employee">{{employee.name|truncatechars:20}}</div>
