--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -1,10 +1,10 @@
 {% load staticfiles %}
 
-      <div class='board-column' id='{{location_verbose|slugify}}' style='box-shadow: #cacaca 0px 0px 12px;border-radius:0px;width:18vw;margin-left:20px;background:white;'>
+      <div class='board-column' value='0' id='{{location_verbose|slugify}}' style='box-shadow: #cacaca 0px 0px 12px;border-radius:0px;width:18vw;margin-left:20px;background:white;'>
         <div class='board-column-header hList hList_5up' style='padding-left: 2px;height: 42px;background: none;color: #757575;opacity: 1;transform: scale(1);margin-bottom: 12px;padding-bottom: 12px;margin-top: 12px;'>
           <div class='location-title' style='line-height: 2em;text-transform: uppercase;letter-spacing: 1px;font-size: 1.1em;font-weight: 400;vertical-align: bottom;'>
             <span>{{location_verbose}}</span>
-            <a class='add-shift' style='float:right;font-weight: 700;font-size: 1.2em;margin-top: -1px;'>+</a>
+            <a class='add-shift' value='0' style='float:right;font-weight: 700;font-size: 1.2em;margin-top: -1px;'>+</a>
           </div>
         </div>
         {% for shift, scheduled in position.items %}
