--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -5,7 +5,7 @@
 
         <div class="shift-template d-none" style='text-transform:uppercase;width:15.3vw'>
           <input class="read-short added-role highlight-default" type="text" placeholder="#1">
-          <div class="board-item" style='margin-left:5px;height:150px;'>
+          <div class="board-item" style='margin-left:5px;'>
             <div class="board-item-content added-role highlight-default" style='width:8.7vw;max-height:35px;'>
               Extra #1
             </div>
@@ -64,11 +64,13 @@
             
             {% for category, location_num in event_categories.items %}
             
-            {% ifequal category "Main Stands" %}
-                <div class='board location-board tab-pane show active fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
-            {% else %}
-                <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
-            {% endifequal %}
+            <!--{% ifequal category "Main Stands" %}-->
+            <!--    <div class='board location-board tab-pane show active fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>-->
+            <!--{% else %}-->
+            <!--    <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>-->
+            <!--{% endifequal %}-->
+            <div class='board location-board tab-pane fade {{forloop.first|yesno:"active,"}}' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
+
             
                 {% for parent, attributes in location_num.items %}
                     {% if attributes.active %}
