--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -20,4 +20,7 @@
     </div>
   </div>
 </div>
+<input class="form-control col-3" type="text" id="ajax" list="json-datalist" placeholder="e.g. datalist">
+<datalist id="json-datalist"></datalist>
+<!--<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">-->
 <hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />
