--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -2,19 +2,19 @@
 {% load staticfiles %}
 {% block content %}  
 
+<!--Hidden Items-->
+<div class="shift-template d-none" style='text-transform:uppercase;width:15.3vw'>
+  <input class="read-short added-role highlight-default" type="text" placeholder="#1">
+  <div class="board-item" style='margin-left:5px;'>
+    <div class="board-item-content added-role highlight-default" style='width:8.7vw;max-height:35px;'>
+      Extra #1
+    </div>
+  </div>
+  <input type="text" class="arrival-time highlight-default" placeholder="Time" aria-label="Arrival">
+</div>
 
-        <div class="shift-template d-none" style='text-transform:uppercase;width:15.3vw'>
-          <input class="read-short added-role highlight-default" type="text" placeholder="#1">
-          <div class="board-item" style='margin-left:5px;'>
-            <div class="board-item-content added-role highlight-default" style='width:8.7vw;max-height:35px;'>
-              Extra #1
-            </div>
-          </div>
-          <input type="text" class="arrival-time highlight-default" placeholder="Time" aria-label="Arrival">
-        </div>
-
-
-
+<datalist id="json-datalist"></datalist>
+<!--End Hidden Items-->
 
 <div class='container-fluid' style='height:100vh;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
 
