--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -11,6 +11,12 @@
         <div class="board-column-content" style='text-transform:uppercase;width:15.3vw'>
           
           <input class="read-short highlight-default highlight-update" type="text" placeholder="{{shift}}" readonly>
+          <div class='input-container'>
+            <input class="form-control col-3 trial" type="text" list="json-datalist">
+            <datalist class="json-datalist"></datalist>
+          </div>
+          
+          
           <div class="board-item" style='margin-left:5px;'>
             
             <div class="board-item-content highlight-default" style='width:8.7vw;max-height:35px;'>
@@ -25,3 +31,5 @@
         
         
       </div>
+      
+      
