--- a/events/templates/events/detail/panel/employees.html
+++ b/events/templates/events/detail/panel/employees.html
@@ -12,7 +12,7 @@
       <li class="list-group-item" style='height:69vh;'>
         <div class='board-column pl-0'>
           <div class='scroll-content-wrapper'>
-            <div class="employee-column-content" style='letter-spacing:0px;'>
+            <div class="employee-column-content board-name" id='employee-board' style='letter-spacing:0px;'>
               {% for employee in all_employees %}
                 <div class="board-item" id='{{employee.2}}' style='margin-left:5px;'>
                   <div class="board-item-content highlight-employee">
