--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1313,7 +1313,7 @@ fillColour {  0% {
   /*right: 0;*/
 }
 
-.input-container, .trial {
+.input-container, .name-input {
   /*position: absolute;*/
   border: none;
   width: 8.7vw;
@@ -1327,7 +1327,7 @@ fillColour {  0% {
 }
 
 
-.trial {
+.name-input {
   margin: 0px;
   padding: 4px 4px 4px 10px;
   /*box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);*/
@@ -1335,7 +1335,7 @@ fillColour {  0% {
   font-weight: 100;
   font-size: 17px;
 }
-.trial::placeholder {
+.name-input::placeholder {
   text-align:left;
 }
 
