--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -5,6 +5,9 @@
 <!--Hidden Items-->
 <div class="shift-template d-none" style='text-transform:uppercase;width:15.3vw'>
   <input class="read-short added-role highlight-default" type="text" placeholder="#1">
+  <div class='input-container'>
+    <input class="form-control col-3 name-input" type="text" list="json-datalist">
+  </div>
   <div class="board-item" style='margin-left:5px;'>
     <div class="board-item-content added-role highlight-default" style='width:8.7vw;max-height:35px;'>
       Extra #1
@@ -12,7 +15,6 @@
   </div>
   <input type="text" class="arrival-time highlight-default" placeholder="Time" aria-label="Arrival">
 </div>
-
 <datalist id="json-datalist"></datalist>
 <!--End Hidden Items-->
 
