--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -797,13 +797,13 @@ button:focus {
   margin-left:0px;
 }
 
-.board-column.muuri-item-releasing {
-  z-index: 2;
-}
-.board-column.muuri-item-dragging {
-  z-index: 3;
-  cursor: move;
-}
+/*.board-column.muuri-item-releasing {*/
+/*  z-index: 2;*/
+/*}*/
+/*.board-column.muuri-item-dragging {*/
+/*  z-index: 3;*/
+/*  cursor: move;*/
+/*}*/
 .board-column-header {
   position: relative;
   /*height: 50px;*/
@@ -857,20 +857,20 @@ button:focus {
 .board-item, .employee-item {
   position: absolute;
   margin: 5px 0;
-  z-index:9999;
+  /*z-index:9999;*/
 }
-.employee-column-content .board-item {
-  width:100%;
-}
+/*.employee-column-content .board-item {*/
+/*  width:100%;*/
+/*}*/
 
-.board-item.muuri-item-releasing, .employee-item.muuri-item-releasing {
+.board-item.muuri-item-releasing {
   z-index: 9998;
 }
-.board-item.muuri-item-dragging,.employee-item.muuri-item-dragging {
+.board-item.muuri-item-dragging {
   z-index: 9999;
   cursor: move;
 }
-.board-item.muuri-item-hidden, .employee-item.muuri-item-hidden {
+.board-item.muuri-item-hidden {
   z-index: 0;
 }
 .board-item-content {
