--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -2,107 +2,24 @@
 {% load staticfiles %}
 {% block content %}  
 
-<!--Hidden Items-->
-<div class="shift-template d-none" style='text-transform:uppercase;width:15.3vw'>
-  <input class="read-short added-role highlight-default" type="text" placeholder="#1">
-  <div class='input-container'>
-    <input class="form-control col-3 name-input" type="text" list="json-datalist">
-  </div>
-  <div class="board-item" style='margin-left:5px;'>
-    <div class="board-item-content added-role highlight-default" style='width:8.7vw;max-height:35px;'>
-      Extra #1
+{% include 'events/detail/hidden.html' %}
+<div class='event-details container-fluid'>
+  <div class='row'>
+    {% include 'events/detail/panel.html' %}
+    
+    <div class='col'>
+      {% include 'events/detail/header/event_header.html' with template=template %}
+      
+      <div class='row'>
+        <div class='col-12'>
+          {% if not first_save %}
+            {% include 'events/detail/event_detail-board.html' %}
+          {% endif %}
+      </div>
     </div>
+    
   </div>
-  <input type="text" class="arrival-time highlight-default" placeholder="Time" aria-label="Arrival">
 </div>
-<datalist id="json-datalist"></datalist>
-<!--End Hidden Items-->
-
-<div class='container-fluid' style='height:100vh;font-family:"Source Sans Pro";text-transform:lowercase;color:#333;'>
-
-<div class='row'>
-  
-  <div class='px-0' style='color:white;width:240px'>
-    <div class='col' style='background:rgba(0,0,0,.83);'>
-      <div class='row' style='collapse width navbar-collapse bg-faded' id='navbarNavDropdown3'>
-            <div class='col px-0' style='width:240px;height:100vh;'>
-      {% include 'events/detail/panel.html' %}
-    </div>
-        
-      </div>
-    </div>
-  </div>
-  
-  <div class='col'>
-    <div class='row'>
-      <div class='col-12'>
-        {% include 'events/detail/header/event_header.html' with template=template %}
-      </div>
-    </div>
-    <div class='row'>
-      <div class='col-12'>
-        
-            {% if not first_save %}
-            <div class='location-categories py-2' style='font-size: 1.2em;font-weight: 100;'>
-              <ul class="nav nav-pills" id="pills-tab" role="tablist">
-                
-
-                
-                {% for category in locations %}
-                <li class="nav-item">
-                  <a class="nav-link nav-link-category {{forloop.first|yesno:'active,'}} px-0 mx-4" style='position:relative;' data-toggle="pill" href="#pills-{{category|slugify}}" role="tab" aria-controls="pills-home" aria-selected="false">
-                    <span>{{category}}</span>
-                  </a>
-                </li>
-                {% endfor %}
-              </ul>
-            </div>
-            
-            <div class="tab-contents" id="pills-tabContent">
-              <!--<div class='board location-board tab-pane fade' id='pills-summary' style='margin-bottom:100px;position:absolute;width:80vw;'>-->
-              <!--  {% include 'events/detail/summary.html' %}-->
-              <!--</div>-->
-            
-            
-            {% for category, location_num in event_categories.items %}
-            
-            {% ifequal category "Main Stands" %}
-                <div class='board location-board tab-pane show active fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
-            {% else %}
-                <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>
-            {% endifequal %}
-            <!--<div class='board location-board tab-pane fade {{forloop.first|yesno:"active,"}}' id='pills-{{category|slugify}}' style='margin-bottom:100px;position:absolute;width:80vw;'>-->
-
-            
-                {% for parent, attributes in location_num.items %}
-                    {% if attributes.active %}
-                      {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
-                        {% include 'events/detail/new_location_card.html' %}
-                      {% endwith %}
-                    {% endif %}
-                  {% endfor %}
-                </div>
-            {% endfor %}
-            </div>
-            {% endif %}
-        
-      </div>
-    </div>
-  </div>
-  
-  
-  
-
-  
-
-
-      
-      
-      
-  </div>
-  </div>
-<!--</div>-->
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
@@ -110,5 +27,4 @@
 <script src="https://unpkg.com/muuri@0.6.3/dist/muuri.min.js"></script>
 <script type="text/javascript" src="{% static 'events/js/events.js' %}"></script>
 <script type="text/javascript" src="{% static 'events/js/dragDrop.js' %}"></script>
-
 {% endblock %}
