--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -1,26 +1,26 @@
 {% load staticfiles %}
-
-<div class="row px-4">
-  <div class='col-12 py-4'>
-    <div class='row event-header-details' style='font-size:1.2em;font-family:"Source Sans Pro"'>
-      <div class='col-12'>
-        <span class='event-title' style='font-size:1.5em;font-weight:100;' id='{{event.id}}'>{{event.title}}</span>
-        <form class='float-right'>
-          <select class="form-control" style='display:inline-block;width:200px;'>
-            <option>Save</option>
-            <option>Print</option>
-            <option>Export</option>
-            <option>Email</option>
-          </select>
-          <button type="button" class="btn btn-dark submit"><span>Submit</span></button>
-        </form><br />
-        <span style='font-weight:100;'>Event starts - </span><span>{{event.event_start}}</span><br />
-        <span style='font-weight:100;'>Doors open - </span><span class='event-date'>{{event.doors_open}}</span><br />
+<div class='row'>
+  <div class='col-12'>
+    <div class="row px-4">
+      <div class='col-12 py-4'>
+        <div class='row event-header-details' style='font-size:1.2em;font-family:"Source Sans Pro"'>
+          <div class='col-12'>
+            <span class='event-title' style='font-size:1.5em;font-weight:100;' id='{{event.id}}'>{{event.title}}</span>
+            <form class='float-right'>
+              <select class="form-control" style='display:inline-block;width:200px;'>
+                <option>Save</option>
+                <option>Print</option>
+                <option>Export</option>
+                <option>Email</option>
+              </select>
+              <button type="button" class="btn btn-dark submit"><span>Submit</span></button>
+            </form><br />
+            <span style='font-weight:100;'>Event starts - </span><span>{{event.event_start}}</span><br />
+            <span style='font-weight:100;'>Doors open - </span><span class='event-date'>{{event.doors_open}}</span><br />
+          </div>
+        </div>
       </div>
     </div>
+    <hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />
   </div>
 </div>
-<!--<input class="form-control col-3" type="text" id="ajax" list="json-datalist" placeholder="e.g. datalist">-->
-<!--<datalist id="json-datalist"></datalist>-->
-<!--<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">-->
-<hr style='margin-bottom:0px!important;margin-left: 24px;margin-right: 90px;' />
