--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -1,5 +1,9 @@
 {% load staticfiles %}
 
+{% for parent, attributes in location_num.items %}
+    {% if attributes.active %}
+      {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
+
       <div class='board-column' value='0' id='{{location_verbose|slugify}}' style='box-shadow: #cacaca 0px 0px 12px;border-radius:0px;width:18vw;margin-left:20px;background:white;'>
         <div class='board-column-header hList hList_5up' style='padding-left: 2px;height: 42px;background: none;color: #757575;opacity: 1;transform: scale(1);margin-bottom: 12px;padding-bottom: 12px;margin-top: 12px;'>
           <div class='location-title' style='line-height: 2em;text-transform: uppercase;letter-spacing: 1px;font-size: 1.1em;font-weight: 400;vertical-align: bottom;'>
@@ -8,28 +12,24 @@
           </div>
         </div>
         {% for shift, scheduled in position.items %}
-        <div class="board-column-content board-name" id='{{location_verbose|slugify}}-{{forloop.counter}}' style='text-transform:uppercase;width:15.3vw'>
+        <div class="board-column-content board-name" id='{{location_verbose|slugify}}-{{forloop.counter}}'>
           
           <input class="read-short highlight-default highlight-update" type="text" placeholder="{{shift}}" readonly>
           <div class='input-container'>
             <input class="form-control col-3 name-input" type="text" list="json-datalist">
-            
           </div>
-          
-          
           <div class="board-item" style='margin-left:5px;'>
             
-            <div class="board-item-content highlight-default" style='width:8.7vw;max-height:35px;'>
-              <div>{{scheduled.verbose_name}}</div>
-            </div>
+          <div class="board-item-content highlight-default">
+            <div>{{scheduled.verbose_name}}</div>
+          </div>
             
           </div>
           <input type="text" class="arrival-time highlight-default highlight-update {{shift.0}}" placeholder="Time" aria-label="Arrival">
         </div>
         {% endfor %}
-
-        
-        
       </div>
       
-      
+    {% endwith %}
+  {% endif %}
+{% endfor %}
