Update Django requirement to 2.0.8

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1379,7 +1379,7 @@ fillColour {  0% {
   position:relative;
 }
 
-.location-board {
+.tab-contents .location-board {
   margin-bottom:100px;
   position:absolute;
   width:80vw;
