--- a/events/templates/events/detail/event_detail_board.html
+++ b/events/templates/events/detail/event_detail_board.html
@@ -12,9 +12,9 @@
 <div class="tab-contents" id="pills-tabContent">
   {% for category, location_num in event_categories.items %}
     {% ifequal category "Main Stands" %}
-      <div class='board location-board tab-pane show active fade' id='pills-{{category|slugify}}'>
+      <div class='board tab-pane show active fade' id='pills-{{category|slugify}}'>
     {% else %}
-      <div class='board location-board tab-pane fade' id='pills-{{category|slugify}}'>
+      <div class='board tab-pane fade' id='pills-{{category|slugify}}'>
     {% endifequal %}
     {% include 'events/detail/new_location_card.html' %}
       </div>
